<resources>
    <string name="app_name">Lunch List</string>
    <string name="tv_name">Name:</string>
    <string name="tv_address">Address:</string>
    <string name="bt_save">Save</string>
    <string name="tv_type">Type:</string>
    <string name="rb_takeout">Take-Out</string>
    <string name="rb_sitdown">Sit-Down</string>
    <string name="rb_delivery">Delivery</string>
    <string name="symbol">Symbol</string>
    <string name="tv_notes">Notes:</string>
    <string name="raise_toast">Raise Toast</string>
    <string name="lv_empty_msg">Activate the menu item to add a restaurant!</string>
    <string name="add_new_restaurant">Add new restaurant</string>
</resources>