<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="SpeakableTextPresentCheck" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>

        <LinearLayout
            android:id="@+id/rest_parameters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@id/edit_name"
                            android:text="@string/tv_name" />

                        <EditText
                            android:id="@+id/edit_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:autofillHints=""
                            android:ems="10"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName"
                            android:minHeight="48dp"
                            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@id/edit_address"
                            android:text="@string/tv_address" />

                        <EditText
                            android:id="@+id/edit_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:autofillHints=""
                            android:ems="10"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName"
                            android:minHeight="48dp"
                            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_type" />

                        <RadioGroup
                            android:id="@+id/rg_types"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkedButton="@id/rb_take_out">

                            <RadioButton
                                android:id="@+id/rb_take_out"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/rb_takeout"
                                tools:ignore="DuplicateSpeakableTextCheck" />

                            <RadioButton
                                android:id="@+id/rb_sit_down"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/rb_sitdown"
                                tools:ignore="DuplicateSpeakableTextCheck" />

                            <RadioButton
                                android:id="@+id/rb_delivery"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/rb_delivery" />

                        </RadioGroup>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@id/edit_notes"
                            android:text="@string/tv_notes" />

                        <EditText
                            android:id="@+id/edit_notes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:ems="10"
                            android:imeOptions="actionDone"
                            android:inputType="textMultiLine"
                            android:lines="2"
                            android:maxLines="2"
                            android:importantForAutofill="no" />

                    </TableRow>

                </TableLayout>
            </ScrollView>

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#CACACA"
                android:text="@string/bt_save"
                android:textColor="#000000" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>